build_output_clean4_utf8.txt

> CN-Web-V0@0.0.1 build
> next build

Γû▓ Next.js 16.1.7 (Turbopack)
- Environments: .env
- Experiments (use with caution):
  ┬╖ optimizePackageImports

  Creating an optimized production build ...
node.exe : Error: Can't 
resolve 
'shadcn/tailwind.css' in '
C:\Users\mdtal\Dev\CN\CN-W
eb\CN-Web-V0\app'
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (E  
  rror: Can't re...\CN-   
 Web-V0\app':String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
    [2m[at 
finishWithoutResolve (C:\U
sers\mdtal\Dev\CN\CN-Web\C
N-Web-V0\node_modules\enha
nced-resolve\lib\Resolver.
js:587:18)][0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\Resolver.js:679:14]
[0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\Resolver.js:740:5]
[0m
    [2m[at eval (eval at 
create (C:\Users\mdtal\Dev
\CN\CN-Web\CN-Web-V0\node_
modules\tapable\lib\HookCo
deFactory.js:31:10), 
<anonymous>:15:1)][0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\Resolver.js:740:5]
[0m
    [2m[at eval (eval at 
create (C:\Users\mdtal\Dev
\CN\CN-Web\CN-Web-V0\node_
modules\tapable\lib\HookCo
deFactory.js:31:10), 
<anonymous>:27:1)][0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\DescriptionFilePlug
in.js:89:43][0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\Resolver.js:740:5]
[0m
    [2m[at eval (eval at 
create (C:\Users\mdtal\Dev
\CN\CN-Web\CN-Web-V0\node_
modules\tapable\lib\HookCo
deFactory.js:31:10), 
<anonymous>:15:1)][0m
    [2m[at C:\Users\mdtal
\Dev\CN\CN-Web\CN-Web-V0\n
ode_modules\enhanced-resol
ve\lib\Resolver.js:740:5]
[0m {
  details: "resolve 
'shadcn/tailwind.css' in '
C:\\Users\\mdtal\\Dev\\CN\
\CN-Web\\CN-Web-V0\\app'\n
" +
    '  Parsed request is 
a module\n' +
    '  using description 
file: C:\\Users\\mdtal\\De
v\\CN\\CN-Web\\CN-Web-V0\\
package.json (relative 
path: ./app)\n' +
    '    resolve as 
module\n' +
    "      C:\\Users\\mdta
l\\Dev\\CN\\CN-Web\\CN-Web
-V0\\app\\node_modules 
doesn't exist or is not a 
directory\n" +
    '      looking for 
modules in C:\\Users\\mdta
l\\Dev\\CN\\CN-Web\\CN-Web
-V0\\node_modules\n' +
    "        C:\\Users\\md
tal\\Dev\\CN\\CN-Web\\CN-W
eb-V0\\node_modules\\shadc
n doesn't exist\n" +
    "      C:\\Users\\mdta
l\\Dev\\CN\\CN-Web\\node_m
odules doesn't exist or 
is not a directory\n" +
    "      C:\\Users\\mdta
l\\Dev\\CN\\node_modules 
doesn't exist or is not a 
directory\n" +
    "      C:\\Users\\mdta
l\\Dev\\node_modules 
doesn't exist or is not a 
directory\n" +
    "      C:\\Users\\mdta
l\\node_modules doesn't 
exist or is not a 
directory\n" +
    "      
C:\\Users\\node_modules 
doesn't exist or is not a 
directory\n" +
    "      
C:\\node_modules doesn't 
exist or is not a 
directory"
}

> Build error occurred
Error: Turbopack build 
failed with 2 errors:
./app/globals.css
Error evaluating Node.js 
code
CssSyntaxError: 
tailwindcss: C:\Users\mdta
l\Dev\CN\CN-Web\CN-Web-V0\
app\globals.css:1:1: 
Can't resolve 
'shadcn/tailwind.css' in '
C:\Users\mdtal\Dev\CN\CN-W
eb\CN-Web-V0\app'
    at Input.error (node_m
odules/postcss/lib/input.j
s:135:16) [C:\Users\mdtal\
Dev\CN\CN-Web\CN-Web-V0\.n
ext\build\chunks\node_modu
les_fe693df6._.js:4651:22]
    at Root.error (node_mo
dules/postcss/lib/node.js:
146:32) [C:\Users\mdtal\De
v\CN\CN-Web\CN-Web-V0\.nex
t\build\chunks\node_module
s_fe693df6._.js:928:38]
    [at Object.Once (C:\Us
ers\mdtal\Dev\CN\CN-Web\CN
-Web-V0\node_modules\@tail
windcss\postcss\dist\index
.js:10:6913)]
    [at process.processTic
ksAndRejections (node:inte
rnal/process/task_queues:1
03:5)]
    at async 
LazyResult.runAsync (node_
modules/postcss/lib/lazy-r
esult.js:293:11) [C:\Users
\mdtal\Dev\CN\CN-Web\CN-We
b-V0\.next\build\chunks\no
de_modules_fe693df6._.js:6
214:21]
    at async transform (tu
rbopack:///[turbopack-node
]/transforms/postcss.ts:70
:34) [C:\Users\mdtal\Dev\C
N\CN-Web\CN-Web-V0\.next\b
uild\chunks\[root-of-the-s
erver]__51225daf._.js:146:
36]
    at async run (turbopac
k:///[turbopack-node]/ipc/
evaluate.ts:92:23) [C:\Use
rs\mdtal\Dev\CN\CN-Web\CN-
Web-V0\.next\build\chunks\
[root-of-the-server]__9749
41ed._.js:443:31]

Import trace:
  Client Component 
Browser:
    ./app/globals.css 
[Client Component Browser]
    ./app/layout.tsx 
[Server Component]


./app/(main)/workflow/page
.tsx:4:1
Module not found: Can't 
resolve 'animejs'
[0m [90m 2 |[39m
 [90m 3 |[39m 
[36mimport[39m { 
useEffect[33m,[39m 
useRef[33m,[39m 
useState } [36mfrom[39m 
[32m"react"[39m[33m;[3
9m
[31m[1m>[22m[39m[90m 
4 |[39m [36mimport[39m 
{ animate[33m,[39m 
stagger[33m,[39m random 
} [36mfrom[39m [32m"ani
mejs"[39m[33m;[39m
 [90m   |[39m [31m[1m^
[22m[39m[31m[1m^[22m
[39m[31m[1m^[22m[39m[
31m[1m^[22m[39m[31m[1
m^[22m[39m[31m[1m^[22
m[39m[31m[1m^[22m[39m
[31m[1m^[22m[39m[31m
[1m^[22m[39m[31m[1m^[
22m[39m[31m[1m^[22m[3
9m[31m[1m^[22m[39m[31
m[1m^[22m[39m[31m[1m^
[22m[39m[31m[1m^[22m
[39m[31m[1m^[22m[39m[
31m[1m^[22m[39m[31m[1
m^[22m[39m[31m[1m^[22
m[39m[31m[1m^[22m[39m
[31m[1m^[22m[39m[31m
[1m^[22m[39m[31m[1m^[
22m[39m[31m[1m^[22m[3
9m[31m[1m^[22m[39m[31
m[1m^[22m[39m[31m[1m^
[22m[39m[31m[1m^[22m
[39m[31m[1m^[22m[39m[
31m[1m^[22m[39m[31m[1
m^[22m[39m[31m[1m^[22
m[39m[31m[1m^[22m[39m
[31m[1m^[22m[39m[31m
[1m^[22m[39m[31m[1m^[
22m[39m[31m[1m^[22m[3
9m[31m[1m^[22m[39m[31
m[1m^[22m[39m[31m[1m^
[22m[39m[31m[1m^[22m
[39m[31m[1m^[22m[39m[
31m[1m^[22m[39m[31m[1
m^[22m[39m[31m[1m^[22
m[39m[31m[1m^[22m[39m
[31m[1m^[22m[39m[31m
[1m^[22m[39m[31m[1m^[
22m[39m[31m[1m^[22m[3
9m[31m[1m^[22m[39m
 [90m 5 |[39m 
[36mimport[39m { 
motion[33m,[39m 
[33mAnimatePresence[39m 
} [36mfrom[39m [32m"fra
mer-motion"[39m[33m;[39
m
 [90m 6 |[39m 
[36mimport[39m { [33mSe
arch[39m[33m,[39m [33m
PenTool[39m[33m,[39m 
[33mZap[39m[33m,[39m 
[33mRocket[39m[33m,[39m
 [33mCheckCircle2[39m[3
3m,[39m 
[33mArrowRight[39m } 
[36mfrom[39m [32m"lucid
e-react"[39m[33m;[39m
 [90m 7 |[39m[0m



Import traces:
  Client Component 
Browser:
    ./app/(main)/workflow/
page.tsx [Client 
Component Browser]
    ./app/(main)/workflow/
page.tsx [Server 
Component]

  Client Component SSR:
    ./app/(main)/workflow/
page.tsx [Client 
Component SSR]
    ./app/(main)/workflow/
page.tsx [Server 
Component]

https://nextjs.org/docs/me
ssages/module-not-found


    at async transform (tu
rbopack:///[turbopack-node
]/transforms/postcss.ts:70
:34) [C:\Users\mdtal\Dev\C
N\CN-Web\CN-Web-V0\.next\b
uild\chunks\[root-of-the-s
erver]__51225daf._.js:146:
36])
    at async run (turbopac
k:///[turbopack-node]/ipc/
evaluate.ts:92:23) [C:\Use
rs\mdtal\Dev\CN\CN-Web\CN-
Web-V0\.next\build\chunks\
[root-of-the-server]__9749
41ed._.js:443:31])
    at <unknown> (./app/(m
ain)/workflow/page.tsx:4:1
)
    at <unknown> (https://
nextjs.org/docs/messages/m
odule-not-found)
